# Olfactory-Transformer-Kit

./: AUTONOMOUS_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION.json  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_REPORT.md  CHANGELOG.md  COMPREHENSIVE_VALIDATION_REPORT.json  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEXT_GENERATION_AUTONOMOUS_IMPLEMENTATION_REPORT.md  NEXT_GENERATION_IMPLEMENTATION_REPORT.md  README.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_MASTER_IMPLEMENTATION.md  autonomous_evolution_demo.py  autonomous_evolution_orchestrator.py  autonomous_quality_gates.py  benchmark.py  benchmark_performance.py  comprehensive_autonomous_test_suite.py  comprehensive_autonomous_validation.py  comprehensive_quality_gates.py  comprehensive_test_report.json  comprehensive_validation.py  deployment_config.json  docker-compose.scale.yml  docker-compose.yml  production_validation_report.json  pyproject.toml  pytest.ini  quality_gates_results.json  quality_gates_validation.json  quality_gates_validation_report.md  requirements-dev.txt  (+16 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: healthcheck.py
docs/: deployment.md
examples/: __init__.py  basic_usage.py
nginx/: nginx-lb.conf
olfactory_transformer/: __init__.py  cli.py
olfactory_transformer/advanced/: __init__.py  federated_learning.py  federated_learning_clean.py  neural_architecture_search.py  neural_architecture_search_v2.py  quantum_inspired_optimization.py  quantum_optimizer.py
olfactory_transformer/api/: __init__.py  endpoints.py  middleware.py  models.py  server.py
olfactory_transformer/autonomous/: __init__.py  progressive_gates.py  sdlc_orchestrator.py
olfactory_transformer/core/: __init__.py  config.py  enhanced_features.py  model.py  tokenizer.py
olfactory_transformer/design/: __init__.py  inverse.py
olfactory_transformer/development/: __init__.py  mock_model.py  server.py  testing_utils.py
olfactory_transformer/edge/: __init__.py  deployment.py  global_intelligence_optimization.py  optimization.py
olfactory_transformer/evaluation/: __init__.py  metrics.py
olfactory_transformer/production/: __init__.py  deployment.py
olfactory_transformer/research/: __init__.py  autonomous_discovery.py  autonomous_research.py  autonomous_validation.py  breakthrough_algorithms_2025.py  comparative_studies.py  experimental_framework.py  experimental_validation_framework.py  novel_algorithms.py  quantum_molecular_discovery_2025.py
olfactory_transformer/scaling/: __init__.py  adaptive_quantum_optimization.py  auto_scaling.py  autoscaling_infrastructure.py  distributed_training.py  performance_benchmarking.py  performance_optimization.py  quantum_optimization.py
olfactory_transformer/sensors/: __init__.py  enose.py
olfactory_transformer/training/: __init__.py  trainer.py
olfactory_transformer/utils/: __init__.py  advanced_error_handling.py  autoscaling.py  caching.py  dependency_isolation.py  dependency_manager.py  distributed.py  error_handling.py  i18n.py  i18n_manager.py  intelligent_monitoring.py  intelligent_scaling.py  logging_config.py  monitoring.py  observability.py  optimization.py  performance.py  quantum_performance_optimizer.py  reliability.py  robust_processing.py  scaling.py  security.py  security_simple.py
research_outputs/: breakthrough_algorithms_report.md  comprehensive_research_report.md  validation_framework_report.md
sdk/: __init__.py
sdk/javascript/: package.json
sdk/javascript/src/: index.ts
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
tests/: __init__.py  conftest.py  conftest_autonomous.py  test_core.py  test_i18n.py  test_integration.py  test_model.py  test_robustness.py  test_security.py  test_sensors.py  test_tokenizer.py  test_utils.py
