[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "olfactory-transformer"
dynamic = ["version"]
description = "Foundation model for computational olfaction - smell-sense AI through molecular structure to scent description mapping"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "rdkit>=2022.9.1",
    "networkx>=2.6",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "tqdm>=4.62.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "datasets>=2.0.0",
    "evaluate>=0.4.0",
]

[project.optional-dependencies]
sensors = [
    "pyserial>=3.5",
    "smbus2>=0.4.0",
    "RPi.GPIO>=0.7.1; platform_machine=='armv7l'",
    "adafruit-circuitpython-bme680>=3.0.0",
    "adafruit-circuitpython-sht31d>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
all = [
    "olfactory-transformer[sensors,dev]"
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/quantum-inspired-task-planner"
Documentation = "https://olfactory-transformer.readthedocs.io"
Repository = "https://github.com/danieleschmidt/quantum-inspired-task-planner"
Issues = "https://github.com/danieleschmidt/quantum-inspired-task-planner/issues"

[project.scripts]
olfactory = "olfactory_transformer.cli:main"

[tool.setuptools]
packages = ["olfactory_transformer"]

[tool.setuptools.dynamic]
version = {attr = "olfactory_transformer.__version__"}

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=olfactory_transformer --cov-report=term-missing"
testpaths = ["tests"]